--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^3.7.4",
     "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^4.1.1",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.6",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.2",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
     "mongodb": "^6.13.1",
@@ -22,6 +28,9 @@
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "sonner": "^2.0.1",
+    "tailwind-merge": "^3.0.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
