--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.475.0",
     "mongodb": "^6.13.1",
     "mongoose": "^8.10.1",
+    "nanoid": "^5.1.2",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
@@ -31,6 +32,7 @@
     "react-hook-form": "^7.54.2",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
+    "use-debounce": "^10.0.4",
     "zod": "^3.24.2"
   },
   "devDependencies": {
